--- a/Components/Pages/LearnBlazor/BindProp.razor
+++ b/Components/Pages/LearnBlazor/BindProp.razor
@@ -1,45 +1,116 @@
 ﻿@page "/learnBlazor/bindprop"
 
+<div class="row">
+	<div class="col-6 border p-3">
+		<h3 class="text-primary">Product Playground</h3>
+		<hr />
+		IsActive :<input type="checkbox" @bind="@Product.IsActive" /><br />
+		Input Price: <input type="number" @bind="@Product.Price" @bind:event="oninput" /> <br />
 
-<h3>Product - Data binding </h3>
+		<br />
+		Product Properties
+		<select @bind="@selectedProp">
+			@foreach (var prop in Product.ProductProperties)
+			{
+				<option value="@prop.Key">@prop.Key</option>
+			}
+		</select>
+	</div>
+	<div class="col-6 border p-3">
+		<h3 class="text-primary">Product - Summary </h3>
+		<hr />
+		Name: @Product.Name <br />
+		IsActive: @Product.IsActive <br />
+		Price: @Product.Price <br />
+		This product is: @(Product.IsActive ? "Active" : "InActive") <br />
 
-Name: @Product.Name <br />
-IsActive: @Product.IsActive <br />
-Price: @Product.Price <br />
-This product is: @(Product.IsActive?"Active":"InActive") <br />
+		Selected prop: @selectedProp <br />
+		@if (!string.IsNullOrEmpty(selectedProp))
+		{
+			<p>Selected Value: @Product.ProductProperties.FirstOrDefault(u => u.Key == selectedProp).Value</p>
+		}
 
-IsActive :
-<input type="checkbox" @bind="@Product.IsActive" /><br />
-Input Price: <input type="number" @bind="@Product.Price" @bind:event="oninput" /> <br />
+	</div>
+	<div class="col-12 border p-3">
+		<h2 class="text-success">Product Table</h2>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Product Name</th>
+					<th>Price</th>
+					<th>Is Active</th>
+				</tr>
+			</thead>
 
-<br />
-Product Properties
-<select @bind="@selectedProp">
-	@foreach(var prop in Product.ProductProperties)
-	{
-		<option value="@prop.Key">@prop.Key</option>
-	}
-</select>
-Selected prop: @selectedProp <br />
-@if (!string.IsNullOrEmpty(selectedProp))
-{
-	<p>Selected Value: @Product.ProductProperties.FirstOrDefault(u => u.Key == selectedProp).Value</p>
-}
+			<tbody>
+				@foreach (var prod in ProductList)
+				{
+					<tr>
+						<td><input type="text" @bind="prod.Name" @bind:event="oninput" /></td>
+						<td><input type="text" @bind="prod.Price" @bind:event="oninput" /></td>
+						<td><input type="checkbox" @bind="@prod.IsActive" /></td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	</div>
+	<div class="col-12 border p-3">
+		<h2 class="text-info">Produt Summary</h2>
+		@foreach(var prod in ProductList)
+		{
+			<p>@prod.Name [@prod.Price] is @(prod.IsActive ? "Active" : "InActive")</p>
+		}
+	</div>
+</div>
+
+
 
 @code {
 	private string selectedProp = "";
-	Models.Product Product = new()
+	Product Product = new()
 	{
 		Id = 1,
 		Name="Product 1",
 		Price=5,
 		IsActive=false,
-		ProductProperties = new List<Models.ProductProp>()
+		ProductProperties = new List<Product_Prop>()
 		{
-			new Models.ProductProp{Id=1,Key="Color",Value="Red"},
-			new Models.ProductProp{Id=2,Key="Size",Value="20oz"},
-			new Models.ProductProp{Id=3,Key="Flavor",Value="Rose"}
+			new Product_Prop{Id=1,Key="Color",Value="Red"},
+			new Product_Prop{Id=2,Key="Size",Value="20oz"},
+			new Product_Prop{Id=3,Key="Flavor",Value="Rose"}
 		}
 	};
+
+	List<Product> ProductList = new();
+	protected override void OnInitialized()
+	{
+		ProductList.Add(new()
+            {
+                Id = 1,
+                Name = "Midnight Blaze",
+                IsActive = false,
+                Price = 5.99,
+                ProductProperties = new List<Product_Prop>()
+                {
+                    new Product_Prop { Id = 1, Key = "Flavor", Value = "Rose"},
+                    new Product_Prop { Id = 2, Key = "Size", Value = "20oz"},
+                    new Product_Prop { Id = 3, Key = "Color", Value="Purple" }
+                }
+            });
+
+        ProductList.Add(new()
+            {
+                Id = 2,
+                Name = "Blossom Lily",
+                IsActive = true,
+                Price = 10.59,
+                ProductProperties = new List<Product_Prop>()
+                {
+                    new Product_Prop { Id = 1, Key = "Flavor", Value = "Lily" },
+                    new Product_Prop { Id = 2, Key = "Size", Value = "18oz" },
+                    new Product_Prop {Id = 3,Key = "Color",Value = "White"}
+                }
+            });
+	}
 
 }
