--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -43,6 +43,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Parent / Child Relation
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="learnrouting#targetElement" Match="NavLinkMatch.All">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Learn Routing
+            </NavLink>
+        </div>
     </nav>
 </div>
 
