--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -45,8 +45,14 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="learnrouting#targetElement" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="learnrouting">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Learn Routing
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="blazorjs">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Blazor Js
             </NavLink>
         </div>
     </nav>
