--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -49,6 +49,12 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> LifeCycle
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+        <NavLink class="nav-link" href="blazor-forms">
+            <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> BlazorForms
+        </NavLink>
+        </div>
     </nav>
 </div>
 
